--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</head>
 
 	<body>
-		<img src="/logoTerminal.png" class="logo" id="logo"></img>
+		<img src="logoTerminal.png" class="logo" id="logo"></img>
 		<div id='console'></div>
 		<div class="pattern"></div>
 		<script
