--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<meta charset="utf-8">
 
-		<title>URN Terminal rev2</title>
+		<title>Hacker Typer</title>
 
 		<link href="style.css" rel="stylesheet" type="text/css" />
 
